--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
+.gallery {
+  margin: 10px;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  gap: 10px 10px
+}
+.gallery .card {
+  border: 1px solid black;
+  border-radius: 5px;
+}
+
 .App {
   text-align: center;
 }
