--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,11 @@
 .gallery .card {
   border: 1px solid black;
   border-radius: 5px;
+  padding: 5px;
+}
+
+.card.notAlive {
+  filter: grayscale(100%);
 }
 
 .App {
