--- a/src/component/CharacterCard.css
+++ b/src/component/CharacterCard.css
@@ -2,8 +2,15 @@
     border: 1px solid black;
     border-radius: 5px;
     padding: 5px;
+    background-color: rgba(107,208,220);
+}
+
+.card img {
+    border-radius: 50%;
+    padding: 0 20px;
 }
 
 .card.notAlive {
     filter: grayscale(100%);
+    opacity: 0.5;
 }
