--- a/src/component/Gallery.css
+++ b/src/component/Gallery.css
@@ -2,6 +2,6 @@
     margin: 10px;
     display: flex;
     flex-flow: row wrap;
-    justify-content: space-around;
+    justify-content: center;
     gap: 10px 10px
 }
